# shelf

./: .gitignore  AGENTS.md  Justfile  README.md  Shelf.spec  pyproject.toml
docs/: engineering_plan.md  operations.md  packaging_validation.md  product_plan.md
plans/: 001-build-shelf-mvp-core-2026-04-19-1527.md  002-harden-operations-and-validation-2026-04-19-1549.md  003-package-macos-app-bundle-2026-04-21-1344.md  004-refine-settings-resizing-and-tray-behavior-2026-04-21-1557.md
tasks/: 001-app-skeleton-and-lifecycle-bootstrapping.md  002-local-app-directories-and-settings-persistence.md  003-default-folders-permissions-and-onboarding-flow.md  004-monitored-folder-management-ui-and-domain-rules.md  005-sqlite-schema-migrations-and-repository-layer.md  006-exact-search-index-with-sqlite-fts5.md  007-file-watcher-and-event-normalization.md  008-durable-job-queue-and-worker-orchestration.md  009-baseline-scan-and-startup-reconciliation.md  010-parser-framework-and-normalized-document-model.md  011-pdf-and-docx-parsing-pipeline.md  012-legacy-doc-parsing-and-failure-handling.md  013-fingerprinting-and-deterministic-chunking.md  014-embedding-worker-and-chroma-persistence.md  015-hybrid-query-orchestration-and-ranking.md  016-search-ui-result-actions-and-indexing-status-ux.md  017-observability-rebuild-tools-and-consistency-audits.md  018-performance-tuning-throttling-and-packaging-validation.md  README.md  progress.md
tests/: test_chunking.py  test_database.py  test_embedding.py  test_folders.py  test_maintenance.py  test_parsers.py  test_search.py  test_settings.py  (+2 more)
(+36 files in other folders)
