[project]
name = "shelf"
version = "0.1.0"
description = "Offline-first macOS document search application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.9.0",
  "watchdog>=6.0.0",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "chromadb>=1.0.8",
  "sentence-transformers>=4.1.0",
]

[project.scripts]
shelf = "shelf.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shelf"]
include = ["src/shelf/ui/assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
  "pyinstaller>=6.19.0",
  "pytest>=8.3.5",
  "pytest-qt>=4.4.0",
  "reportlab>=4.4.0",
]

[tool.uv]
default-groups = ["dev"]
